Add summary DataFrame for categorical columns in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -510,6 +510,233 @@
     "# Verify the result\n",
     "print(f'Columns remaining after dropping:\\n{df.columns}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column</th>\n",
+       "      <th>DataType</th>\n",
+       "      <th>NumUniqueValues</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TransactionMonth</td>\n",
+       "      <td>object</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Citizenship</td>\n",
+       "      <td>object</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LegalType</td>\n",
+       "      <td>object</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Title</td>\n",
+       "      <td>object</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Language</td>\n",
+       "      <td>object</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bank</td>\n",
+       "      <td>object</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AccountType</td>\n",
+       "      <td>object</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Country</td>\n",
+       "      <td>object</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Province</td>\n",
+       "      <td>object</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>MainCrestaZone</td>\n",
+       "      <td>object</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>SubCrestaZone</td>\n",
+       "      <td>object</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>ItemType</td>\n",
+       "      <td>object</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AlarmImmobiliser</td>\n",
+       "      <td>object</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>TrackingDevice</td>\n",
+       "      <td>object</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NewVehicle</td>\n",
+       "      <td>object</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>TermFrequency</td>\n",
+       "      <td>object</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>ExcessSelected</td>\n",
+       "      <td>object</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>CoverCategory</td>\n",
+       "      <td>object</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>CoverType</td>\n",
+       "      <td>object</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>CoverGroup</td>\n",
+       "      <td>object</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Section</td>\n",
+       "      <td>object</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Product</td>\n",
+       "      <td>object</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>StatutoryClass</td>\n",
+       "      <td>object</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>StatutoryRiskType</td>\n",
+       "      <td>object</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Column DataType  NumUniqueValues\n",
+       "0    TransactionMonth   object               23\n",
+       "1         Citizenship   object                4\n",
+       "2           LegalType   object                6\n",
+       "3               Title   object                5\n",
+       "4            Language   object                1\n",
+       "5                Bank   object               11\n",
+       "6         AccountType   object                3\n",
+       "7             Country   object                1\n",
+       "8            Province   object                9\n",
+       "9      MainCrestaZone   object               16\n",
+       "10      SubCrestaZone   object               45\n",
+       "11           ItemType   object                1\n",
+       "12   AlarmImmobiliser   object                2\n",
+       "13     TrackingDevice   object                2\n",
+       "14         NewVehicle   object                2\n",
+       "15      TermFrequency   object                2\n",
+       "16     ExcessSelected   object               13\n",
+       "17      CoverCategory   object               28\n",
+       "18          CoverType   object               22\n",
+       "19         CoverGroup   object               14\n",
+       "20            Section   object                5\n",
+       "21            Product   object                4\n",
+       "22     StatutoryClass   object                1\n",
+       "23  StatutoryRiskType   object                1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get categorical columns\n",
+    "categorical_columns = df.select_dtypes(include='object').columns\n",
+    "# Create a summary DataFrame\n",
+    "summary_df = pd.DataFrame({\n",
+    "    'Column': categorical_columns,\n",
+    "    'DataType': [df[col].dtype for col in categorical_columns],\n",
+    "    'NumUniqueValues': [df[col].nunique() for col in categorical_columns]\n",
+    "})\n",
+    "\n",
+    "# Print the summary DataFrame\n",
+    "summary_df"
+   ]
   }
  ],
  "metadata": {
