Add code cell to drop specified columns in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -737,6 +737,16 @@
     "# Print the summary DataFrame\n",
     "summary_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_to_drop = ['Language', 'Country', 'ItemType', 'StatutoryClass', 'StatutoryRiskType']\n",
+    "df = df.drop(columns=columns_to_drop)"
+   ]
   }
  ],
  "metadata": {
