Add gender imputation logic based on title mapping in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -947,6 +947,99 @@
     "print(f'Title Distribution:\\n {df.Title.value_counts()}')\n",
     "print(f'Marital Status Distribution:\\n {df.MaritalStatus.value_counts()}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender Distribution:\n",
+      "Gender\n",
+      "Not specified    940990\n",
+      "Male              42817\n",
+      "Female             6755\n",
+      "Name: count, dtype: int64\n",
+      "Title Distribution:\n",
+      " Title\n",
+      "Mr      933555\n",
+      "Mrs      45850\n",
+      "Ms       13269\n",
+      "Miss      6614\n",
+      "Dr         810\n",
+      "Name: count, dtype: int64\n",
+      "Marital Status Distribution:\n",
+      " MaritalStatus\n",
+      "Not specified    986208\n",
+      "Single             4254\n",
+      "Married            1377\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Gender Distribution:\\n{df.Gender.value_counts()}')\n",
+    "print(f'Title Distribution:\\n {df.Title.value_counts()}')\n",
+    "print(f'Marital Status Distribution:\\n {df.MaritalStatus.value_counts()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "High Proportion of Unspecified Gender:\n",
+    "\n",
+    "A significant portion of the Gender values (950,526) is missing or unspecified.\n",
+    "\n",
+    "These unspecified gender values can be filled using the information from the Title column where available.\n",
+    "Title-to-Gender Mapping:\n",
+    "\n",
+    "Titles like Mr, Mrs, Miss, and Ms provide a clear indication of gender.\n",
+    "Dr is ambiguous and may not specify gender directly.\n",
+    "Approach to Impute Missing Genders Using Titles:\n",
+    "\n",
+    "Mr → Male\n",
+    "\n",
+    "Mrs, Miss, Ms → Female\n",
+    "\n",
+    "Dr → Leave as Not specified (since it’s ambiguous)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender\n",
+      "Male      933555\n",
+      "Female     65733\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Map Titles to Gender\n",
+    "title_to_gender_map = {\n",
+    "    'Mr': 'Male',\n",
+    "    'Mrs': 'Female',\n",
+    "    'Ms': 'Female',\n",
+    "    'Miss': 'Female',\n",
+    "    'Dr': None  # Leave as None since it could be either gender\n",
+    "}\n",
+    "\n",
+    "# Fill missing Gender based on Title\n",
+    "df['Gender'] = df.apply(lambda row: title_to_gender_map.get(row['Title'], row['Gender']), axis=1)\n",
+    "\n",
+    "# Display the updated Gender counts\n",
+    "print(df['Gender'].value_counts())"
+   ]
   }
  ],
  "metadata": {
