Add code cell to drop additional specified columns in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -1028,6 +1028,16 @@
     "# Drop the 'MaritalStatus' column from the DataFrame\n",
     "df = df.drop(columns=['MaritalStatus'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the specified columns from the DataFrame\n",
+    "df = df.drop(columns=['Unnamed: 0', 'UnderwrittenCoverID', 'PolicyID'])"
+   ]
   }
  ],
  "metadata": {
