Enhance data preprocessing notebook with encoding strategies for categorical features and separate features by cardinality

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -1031,12 +1031,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop the specified columns from the DataFrame\n",
     "df = df.drop(columns=['Unnamed: 0', 'UnderwrittenCoverID', 'PolicyID'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding Strategy:\n",
+    "\n",
+    "Label Encoding: For binary or low-cardinality features.\n",
+    "One-Hot Encoding: For moderate cardinality features where the number of new columns remains manageable.\n",
+    "Target Encoding: For high cardinality features to reduce the number of new features while capturing useful patterns.\n",
+    "Frequency Encoding: Another option for high cardinality features, where you replace categories with their frequency in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define cardinality thresholds\n",
+    "low_cardinality_threshold = 10\n",
+    "high_cardinality_threshold = 20\n",
+    "\n",
+    "# Identify categorical columns\n",
+    "categorical_cols = df.select_dtypes(include='object').columns\n",
+    "\n",
+    "# Separate features by cardinality\n",
+    "low_cardinality_features = [col for col in categorical_cols if df[col].nunique() <= low_cardinality_threshold]\n",
+    "moderate_cardinality_features = [col for col in categorical_cols if low_cardinality_threshold < df[col].nunique() <= high_cardinality_threshold]\n",
+    "high_cardinality_features = [col for col in categorical_cols if df[col].nunique() > high_cardinality_threshold]\n",
+    "\n",
+    "# Label Encoding for low cardinality features\n",
+    "label_encoders = {}\n",
+    "for feature in low_cardinality_features:\n",
+    "    le = LabelEncoder()\n",
+    "    df[feature] = le.fit_transform(df[feature])\n",
+    "    label_encoders[feature] = le\n",
+    "\n",
+    "# One-Hot Encoding for moderate cardinality features\n",
+    "one_hot_encoder = OneHotEncoder(drop='first', sparse_output=False)\n",
+    "for feature in moderate_cardinality_features:\n",
+    "    encoded = one_hot_encoder.fit_transform(df[[feature]])\n",
+    "    encoded_df = pd.DataFrame(encoded, columns=one_hot_encoder.get_feature_names_out([feature]))\n",
+    "    df = pd.concat([df, encoded_df], axis=1)\n",
+    "    df = df.drop(columns=[feature])\n",
+    "\n",
+    "# Frequency Encoding for high cardinality features (Example)\n",
+    "for feature in high_cardinality_features:\n",
+    "    freq = df[feature].value_counts()\n",
+    "    df[feature + '_freq'] = df[feature].map(freq)\n",
+    "    df = df.drop(columns=[feature])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Save or proceed with further analysis/modeling\n",
+    "# df.to_csv('preprocessed_data.csv', index=False)  # Uncomment to save the preprocessed data"
    ]
   }
  ],
