Add Premium to Claims Ratio feature in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2030,6 +2030,22 @@
     "# Verify the transformations\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create new feature from TotalPremium and TotalClaims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Premium_to_Claims_Ratio'] = df['TotalPremium'] / (df['TotalClaims'] + 1)  # +1 to avoid division by zero"
+   ]
   }
  ],
  "metadata": {
