Add feature scaling and selection steps in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2040,11 +2040,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['Premium_to_Claims_Ratio'] = df['TotalPremium'] / (df['TotalClaims'] + 1)  # +1 to avoid division by zero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scaling Before Feature Selection :\n",
+    "\n",
+    "Feature scaling should typically be performed before feature selection. This ensures that all features are on a comparable scale before we apply selection techniques like SelectKBest, which may rely on statistical methods sensitive to scale, such as f_classif or mutual_info_classif.\n",
+    "\n",
+    "If features have different ranges, features with larger scales might dominate the selection process, making the selection biased toward those features. By scaling before selection, each feature contributes fairly to the selection criteria."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with more than 1 missing value:\n",
+      "Index([], dtype='object')\n",
+      "Columns remaining after dropping:\n",
+      "Index(['IsVATRegistered', 'Citizenship', 'LegalType', 'Title', 'AccountType',\n",
+      "       'Gender', 'Province', 'PostalCode', 'VehicleType', 'RegistrationYear',\n",
+      "       'AlarmImmobiliser', 'TrackingDevice', 'CapitalOutstanding',\n",
+      "       'NewVehicle', 'SumInsured', 'TermFrequency', 'CalculatedPremiumPerTerm',\n",
+      "       'Section', 'Product', 'TotalPremium', 'TotalClaims', 'TransactionYear',\n",
+      "       'TransactionMonthOnly', 'TransactionQuarter', 'Bank_Capitec Bank',\n",
+      "       'Bank_First National Bank', 'Bank_FirstRand Bank', 'Bank_Investec Bank',\n",
+      "       'Bank_Ithala Bank', 'Bank_Mercantile Lisbon Bank', 'Bank_Nedbank',\n",
+      "       'Bank_Old Mutual', 'Bank_RMB Private Bank', 'Bank_Standard Bank',\n",
+      "       'MainCrestaZone_Cape Province (Cape Town)',\n",
+      "       'MainCrestaZone_Cape Province (East and North of Cape Town)',\n",
+      "       'MainCrestaZone_Ciskei, Cape Mid 1', 'MainCrestaZone_East London',\n",
+      "       'MainCrestaZone_Johannesburg',\n",
+      "       'MainCrestaZone_Karoo 1 (Northeast of Cape Town)',\n",
+      "       'MainCrestaZone_Langkloof, Coast 2, Coast 1', 'MainCrestaZone_Natal',\n",
+      "       'MainCrestaZone_Natal (Durban)', 'MainCrestaZone_Oranje Free State',\n",
+      "       'MainCrestaZone_Port Elizabeth', 'MainCrestaZone_Rand East',\n",
+      "       'MainCrestaZone_Tembu 2, Cape Mid 2, Cape Mid West, Tembu 1',\n",
+      "       'MainCrestaZone_Transvaal (Pretoria)',\n",
+      "       'MainCrestaZone_Transvaal (all except Pretoria)', 'bodytype_C/C',\n",
+      "       'bodytype_C/P', 'bodytype_CCL', 'bodytype_D/C', 'bodytype_D/S',\n",
+      "       'bodytype_H/B', 'bodytype_MPV', 'bodytype_P/V', 'bodytype_S/C',\n",
+      "       'bodytype_S/D', 'bodytype_S/W', 'bodytype_SUV', 'bodytype_nan',\n",
+      "       'ExcessSelected_Mobility - Metered Taxis - R2000',\n",
+      "       'ExcessSelected_Mobility - Metered Taxis - R5000',\n",
+      "       'ExcessSelected_Mobility - R250',\n",
+      "       'ExcessSelected_Mobility - Taxi with value less than R100 000 - R3 000',\n",
+      "       'ExcessSelected_Mobility - Taxi with value more than R100 000 - R10 000',\n",
+      "       'ExcessSelected_Mobility - Taxi with value more than R100 000 - R5 000',\n",
+      "       'ExcessSelected_Mobility - Taxi with value more than R100 000 - R5 000 (April)',\n",
+      "       'ExcessSelected_Mobility - Taxi with value more than R100 000 - R7 500',\n",
+      "       'ExcessSelected_Mobility - Trailers',\n",
+      "       'ExcessSelected_Mobility - Windscreen',\n",
+      "       'ExcessSelected_Mobility - Windscreen (Feb2015)',\n",
+      "       'ExcessSelected_No excess', 'CoverGroup_Asset Value Preserver',\n",
+      "       'CoverGroup_Baggage/Luggage', 'CoverGroup_Basic Excess Waiver',\n",
+      "       'CoverGroup_Cash Takings', 'CoverGroup_Comprehensive - Taxi',\n",
+      "       'CoverGroup_Credit Protection', 'CoverGroup_Deposit Cover',\n",
+      "       'CoverGroup_Fire,Theft and Third Party', 'CoverGroup_Income Protector',\n",
+      "       'CoverGroup_Motor Comprehensive',\n",
+      "       'CoverGroup_Standalone passenger liability',\n",
+      "       'CoverGroup_Third Party Only', 'CoverGroup_Trailer',\n",
+      "       'SubCrestaZone_freq', 'CoverCategory_freq', 'CoverType_freq',\n",
+      "       'Premium_to_Claims_Ratio'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check missing values in each column\n",
+    "missing_counts = df.isnull().sum()\n",
+    "\n",
+    "# Print columns with more than 1 missing value\n",
+    "columns_with_missing = missing_counts[missing_counts > 1].index\n",
+    "print(f'Columns with more than 1 missing value:\\n{columns_with_missing}')\n",
+    "\n",
+    "# Drop these columns\n",
+    "df = df.drop(columns=columns_with_missing)\n",
+    "\n",
+    "# Verify the result\n",
+    "print(f'Columns remaining after dropping:\\n{df.columns}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separate Target and Feature Variables\n",
+    "X = df.drop(columns=['TotalPremium', 'TotalClaims'])\n",
+    "y = df['TotalPremium']  # or 'TotalClaims' depending on the target\n",
+    "\n",
+    "# Scale the data\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection and Dimensionality Reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Feature Selection using SelectKBest\n",
+    "\n",
+    "selector = SelectKBest(score_func=f_classif, k=20)  # Select top 20 features\n",
+    "X_new = selector.fit_transform(X_scaled, y)"
    ]
   }
  ],
