--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2176,10 +2176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example: Dimensionality Reduction using PCA\n",
+    "pca = PCA(n_components=20)  # Reduce to 20 principal components\n",
+    "X_pca = pca.fit_transform(X)"
+   ]
   }
  ],
  "metadata": {
