Add code to save preprocessed dataframe to CSV and display its head in data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2241,7 +2241,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the new dataframe to csv for model training\n",
+    "df_new.to_csv('../data/preprocessed_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new.head()"
+   ]
   }
  ],
  "metadata": {
