Display the head of the preprocessed dataframe in the data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2248,9 +2248,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IsVATRegistered</th>\n",
+       "      <th>RegistrationYear</th>\n",
+       "      <th>CalculatedPremiumPerTerm</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Bank_Investec Bank</th>\n",
+       "      <th>Bank_Mercantile Lisbon Bank</th>\n",
+       "      <th>MainCrestaZone_Natal (Durban)</th>\n",
+       "      <th>bodytype_C/P</th>\n",
+       "      <th>bodytype_MPV</th>\n",
+       "      <th>bodytype_S/D</th>\n",
+       "      <th>ExcessSelected_Mobility - R250</th>\n",
+       "      <th>ExcessSelected_Mobility - Trailers</th>\n",
+       "      <th>ExcessSelected_Mobility - Windscreen</th>\n",
+       "      <th>ExcessSelected_No excess</th>\n",
+       "      <th>CoverGroup_Baggage/Luggage</th>\n",
+       "      <th>CoverGroup_Cash Takings</th>\n",
+       "      <th>CoverGroup_Comprehensive - Taxi</th>\n",
+       "      <th>CoverGroup_Trailer</th>\n",
+       "      <th>CoverCategory_freq</th>\n",
+       "      <th>CoverType_freq</th>\n",
+       "      <th>TotalPremium</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14.074932</td>\n",
+       "      <td>-1.908809</td>\n",
+       "      <td>-0.460139</td>\n",
+       "      <td>3.248695</td>\n",
+       "      <td>-0.027064</td>\n",
+       "      <td>-0.011619</td>\n",
+       "      <td>-0.300558</td>\n",
+       "      <td>-0.025384</td>\n",
+       "      <td>-0.187147</td>\n",
+       "      <td>4.784029</td>\n",
+       "      <td>-0.021521</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>3.045838</td>\n",
+       "      <td>-1.946355</td>\n",
+       "      <td>-0.013115</td>\n",
+       "      <td>-0.01706</td>\n",
+       "      <td>0.462091</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>0.374133</td>\n",
+       "      <td>0.459047</td>\n",
+       "      <td>21.929825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14.074932</td>\n",
+       "      <td>-1.908809</td>\n",
+       "      <td>-0.460139</td>\n",
+       "      <td>3.248695</td>\n",
+       "      <td>-0.027064</td>\n",
+       "      <td>-0.011619</td>\n",
+       "      <td>-0.300558</td>\n",
+       "      <td>-0.025384</td>\n",
+       "      <td>-0.187147</td>\n",
+       "      <td>4.784029</td>\n",
+       "      <td>-0.021521</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>3.045838</td>\n",
+       "      <td>-1.946355</td>\n",
+       "      <td>-0.013115</td>\n",
+       "      <td>-0.01706</td>\n",
+       "      <td>0.462091</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>0.374133</td>\n",
+       "      <td>0.459047</td>\n",
+       "      <td>21.929825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14.074932</td>\n",
+       "      <td>-1.908809</td>\n",
+       "      <td>-0.460139</td>\n",
+       "      <td>3.248695</td>\n",
+       "      <td>-0.027064</td>\n",
+       "      <td>-0.011619</td>\n",
+       "      <td>-0.300558</td>\n",
+       "      <td>-0.025384</td>\n",
+       "      <td>-0.187147</td>\n",
+       "      <td>4.784029</td>\n",
+       "      <td>-0.021521</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>3.045838</td>\n",
+       "      <td>-1.946355</td>\n",
+       "      <td>-0.013115</td>\n",
+       "      <td>-0.01706</td>\n",
+       "      <td>0.462091</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>0.374133</td>\n",
+       "      <td>0.459047</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14.074932</td>\n",
+       "      <td>-1.908809</td>\n",
+       "      <td>1.888399</td>\n",
+       "      <td>3.248695</td>\n",
+       "      <td>-0.027064</td>\n",
+       "      <td>-0.011619</td>\n",
+       "      <td>-0.300558</td>\n",
+       "      <td>-0.025384</td>\n",
+       "      <td>-0.187147</td>\n",
+       "      <td>4.784029</td>\n",
+       "      <td>-0.021521</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>-0.328317</td>\n",
+       "      <td>-1.946355</td>\n",
+       "      <td>-0.013115</td>\n",
+       "      <td>-0.01706</td>\n",
+       "      <td>0.462091</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>-2.852745</td>\n",
+       "      <td>0.478056</td>\n",
+       "      <td>54.824561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14.074932</td>\n",
+       "      <td>-1.908809</td>\n",
+       "      <td>1.888399</td>\n",
+       "      <td>3.248695</td>\n",
+       "      <td>-0.027064</td>\n",
+       "      <td>-0.011619</td>\n",
+       "      <td>-0.300558</td>\n",
+       "      <td>-0.025384</td>\n",
+       "      <td>-0.187147</td>\n",
+       "      <td>4.784029</td>\n",
+       "      <td>-0.021521</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>-0.328317</td>\n",
+       "      <td>-1.946355</td>\n",
+       "      <td>-0.013115</td>\n",
+       "      <td>-0.01706</td>\n",
+       "      <td>0.462091</td>\n",
+       "      <td>-0.008718</td>\n",
+       "      <td>-2.852745</td>\n",
+       "      <td>0.478056</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   IsVATRegistered  RegistrationYear  CalculatedPremiumPerTerm   Product  \\\n",
+       "0        14.074932         -1.908809                 -0.460139  3.248695   \n",
+       "1        14.074932         -1.908809                 -0.460139  3.248695   \n",
+       "2        14.074932         -1.908809                 -0.460139  3.248695   \n",
+       "3        14.074932         -1.908809                  1.888399  3.248695   \n",
+       "4        14.074932         -1.908809                  1.888399  3.248695   \n",
+       "\n",
+       "   Bank_Investec Bank  Bank_Mercantile Lisbon Bank  \\\n",
+       "0           -0.027064                    -0.011619   \n",
+       "1           -0.027064                    -0.011619   \n",
+       "2           -0.027064                    -0.011619   \n",
+       "3           -0.027064                    -0.011619   \n",
+       "4           -0.027064                    -0.011619   \n",
+       "\n",
+       "   MainCrestaZone_Natal (Durban)  bodytype_C/P  bodytype_MPV  bodytype_S/D  \\\n",
+       "0                      -0.300558     -0.025384     -0.187147      4.784029   \n",
+       "1                      -0.300558     -0.025384     -0.187147      4.784029   \n",
+       "2                      -0.300558     -0.025384     -0.187147      4.784029   \n",
+       "3                      -0.300558     -0.025384     -0.187147      4.784029   \n",
+       "4                      -0.300558     -0.025384     -0.187147      4.784029   \n",
+       "\n",
+       "   ExcessSelected_Mobility - R250  ExcessSelected_Mobility - Trailers  \\\n",
+       "0                       -0.021521                           -0.008718   \n",
+       "1                       -0.021521                           -0.008718   \n",
+       "2                       -0.021521                           -0.008718   \n",
+       "3                       -0.021521                           -0.008718   \n",
+       "4                       -0.021521                           -0.008718   \n",
+       "\n",
+       "   ExcessSelected_Mobility - Windscreen  ExcessSelected_No excess  \\\n",
+       "0                              3.045838                 -1.946355   \n",
+       "1                              3.045838                 -1.946355   \n",
+       "2                              3.045838                 -1.946355   \n",
+       "3                             -0.328317                 -1.946355   \n",
+       "4                             -0.328317                 -1.946355   \n",
+       "\n",
+       "   CoverGroup_Baggage/Luggage  CoverGroup_Cash Takings  \\\n",
+       "0                   -0.013115                 -0.01706   \n",
+       "1                   -0.013115                 -0.01706   \n",
+       "2                   -0.013115                 -0.01706   \n",
+       "3                   -0.013115                 -0.01706   \n",
+       "4                   -0.013115                 -0.01706   \n",
+       "\n",
+       "   CoverGroup_Comprehensive - Taxi  CoverGroup_Trailer  CoverCategory_freq  \\\n",
+       "0                         0.462091           -0.008718            0.374133   \n",
+       "1                         0.462091           -0.008718            0.374133   \n",
+       "2                         0.462091           -0.008718            0.374133   \n",
+       "3                         0.462091           -0.008718           -2.852745   \n",
+       "4                         0.462091           -0.008718           -2.852745   \n",
+       "\n",
+       "   CoverType_freq  TotalPremium  \n",
+       "0        0.459047     21.929825  \n",
+       "1        0.459047     21.929825  \n",
+       "2        0.459047      0.000000  \n",
+       "3        0.478056     54.824561  \n",
+       "4        0.478056      0.000000  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_new.head()"
    ]
