Add code to display the mean of the preprocessed dataframe in the data preprocessing notebook

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2486,6 +2486,47 @@
    "source": [
     "df_new.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IsVATRegistered                        -1.965169e-17\n",
+       "RegistrationYear                       -1.841734e-14\n",
+       "CalculatedPremiumPerTerm               -2.069466e-16\n",
+       "Product                                -3.034004e-16\n",
+       "Bank_Investec Bank                      1.331427e-17\n",
+       "Bank_Mercantile Lisbon Bank             1.893411e-18\n",
+       "MainCrestaZone_Natal (Durban)           6.968320e-17\n",
+       "bodytype_C/P                           -8.326745e-18\n",
+       "bodytype_MPV                            2.907256e-17\n",
+       "bodytype_S/D                           -5.297288e-17\n",
+       "ExcessSelected_Mobility - R250         -2.589674e-18\n",
+       "ExcessSelected_Mobility - Trailers     -2.229109e-19\n",
+       "ExcessSelected_Mobility - Windscreen    4.527135e-17\n",
+       "ExcessSelected_No excess               -1.165176e-17\n",
+       "CoverGroup_Baggage/Luggage             -3.829450e-18\n",
+       "CoverGroup_Cash Takings                -2.058596e-17\n",
+       "CoverGroup_Comprehensive - Taxi        -1.182227e-16\n",
+       "CoverGroup_Trailer                     -2.229109e-19\n",
+       "CoverCategory_freq                      5.774725e-17\n",
+       "CoverType_freq                         -2.410493e-16\n",
+       "TotalPremium                            1.486439e+01\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new.mean()"
+   ]
   }
  ],
  "metadata": {
