Add markdown section for train-test split implementation steps in model training notebook

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -36,6 +36,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train-Test Split Implementation Steps:\n",
+    "Load the Data:\n",
+    "\n",
+    "Import the preprocessed dataset from the CSV file.\n",
+    "\n",
+    "Divide the Data:\n",
+    "Use train_test_split from scikit-learn to split the data into training and test sets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
