Add data loading and splitting code to model training notebook

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -50,9 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Load the preprocessed data\n",
+    "df = pd.read_csv('../data/preprocessed_data.csv')\n",
+    "\n",
+    "# Define features and target variable\n",
+    "X = df.drop(columns=['TotalPremium'])\n",
+    "y = df['TotalPremium']\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
